# ucam-auth

./: LICENSE  README.md  pyproject.toml
ucam_auth/: __init__.py  client.py
