[project]
name = "ucam-auth"
version = "0.1.0"
description = "University of Cambridge authentication library for OIDC/OAuth2"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Jeremy Chen", email = "git@sl.intgrah.com" }]
keywords = ["cambridge", "ucam", "authentication", "oidc", "oauth2", "sso"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "msal>=1.24.0",
    "msgraph-sdk>=1.0.0",
    "azure-core>=1.28.0",
]

[project.urls]
Homepage = "https://github.com/cucats/ucam-auth"
Issues = "https://github.com/cucats/ucam-auth"

[project.optional-dependencies]
dev = ["black>=23.0.0"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ucam_auth*"]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
    "ty>=0.0.21",
]
